adjust restart button css

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<div class="circle" id="41"></div>
 	</section>
 	
-	<section class="resetGame"><button id="resetBtn">New Game</button></section>
+	<section class="resetGame"><button id="resetBtn">Restart Game</button></section>
 
 	<p id="message"></p>
 
